# SloerShot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SloerShot-demo.bat
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  parity.rs
apps/macos/: Package.swift
apps/macos/Sources/CShotCore/: module.modulemap  shotcore.h
apps/macos/Sources/SloerShot/: AllInOneBar.swift  AnnotationCanvas.swift  AnnotationModel.swift  BackgroundPanel.swift  CameraOverlay.swift  Capture.swift  CaptureHistory.swift  ClickHighlighter.swift  CloudClient.swift  CombineImages.swift  ContentView.swift  CropOverlay.swift  Destinations.swift  DestinationsView.swift  EditorView.swift  EffectStudioView.swift  GifExporter.swift  GlobalHotkeys.swift  (+22 more)
apps/swift-smoke/: build.bat  main.swift
apps/swift-smoke/CShotCore/: module.modulemap  shotcore.h
apps/windows/SloerShot.App/: App.xaml  App.xaml.cs  CloudClient.cs  CountdownOverlay.cs  MainWindow.xaml  MainWindow.xaml.cs  PinWindow.cs  SloerShot.App.csproj  TrayIcon.cs  app.manifest
apps/windows/SloerShot.Smoke/: Program.cs  SloerShot.Smoke.csproj
backend/: .env.example  package-lock.json  package.json
backend/scripts/: issue-demo.js  test-auth.js  test-share-http.js  test-share.js  test-upload-http.js
backend/src/: auth.js  entitlement.js  keys.js  server.js  share.js  stripe.js
core/shotcore/: Cargo.toml
core/shotcore/include/: shotcore.h
core/shotcore/src/: align.rs  analyze.rs  autotag.rs  beautify.rs  callout.rs  captions.rs  cloud.rs  codeshot.rs  combine.rs  contrast.rs  corners.rs  crop.rs  custom_uploader.rs  deskew.rs  detect.rs  docdetect.rs  ean13.rs  edges.rs  editor.rs  export.rs  ffi.rs  fx.rs  geometry.rs  guide.rs  hashing.rs  history.rs  hit.rs  hough.rs  imagediff.rs  imgexport.rs  indexer.rs  lib.rs  license.rs  magnifier.rs  mask.rs  measure.rs  mockup.rs  model.rs  objdetect.rs  ocr.rs  (+32 more)
core/shotcore/tests/: end_to_end.rs
docs/: MACOS_PLAN.md  MEGAPLAN.md  SHAREX_PARITY_PLAN.md  WINDOWS_PLAN.md
packaging/: SIGNING.md
packaging/windows/: SloerShot.iss  build-installer.ps1
(+19 files in other folders)
