[workspace]
resolver = "2"
members = [
    "core/shotcore",
    "apps/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
authors = ["SloerShot"]
repository = "https://example.com/sloershot"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff"] }
imageproc = "0.25"
ab_glyph = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
